--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx server/index.ts",
     "start": "tsx server/index.ts",
     "build": "tsc",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "dev:nodemon": "nodemon --exec tsx server/index.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -18,6 +19,7 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.11",
     "pdfjs-dist": "^5.4.624",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
